# fractalide

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.json  CONTRIBUTING.md  Cargo.toml  HOWTO.adoc  HOWTO.md  README.adoc  README.md  buildCache.sh  default.nix  dev-shell  fractalide-module.nix  fvm.nix  info.rkt  main.rkt  page.html  release.nix  release.sh  test.rkt
.github/ISSUE_TEMPLATE/: issue-template.md  problem-.md  problem-template.md  problem.md
benches/: lib.rs
boolean/not/: Cargo.toml  default.nix
build-support/: apk-builder.nix  buildFractalideComponent.nix  buildFractalideContract.nix  buildFractalideSubnet.nix  buildRustPackage.nix  capnpc-rust.nix  default.nix  fetchcargo.nix  genName.nix  ndk-standalone-toolchain.nix  rust-android.nix  rust-component-lookup.nix  rust-contract-lookup.nix  rust-packages.nix  rustfbp.nix  upkeepers.nix
build-support/component-lookup/: default.nix
build-support/component_lookup/: default.nix
build-support/contract-lookup/: Cargo.toml
build-support/contract_lookup/: default.nix
build-support/mobile/: default.nix
build-support/patch-registry-deps/: pkg-config
build-support/pkgs/: ncurses.nix  zlib.nix
components/: README.md  default.nix  mapping.nix
components/component_lookup/: default.nix
components/debug/: Cargo.toml  default.nix
components/docs/: default.nix
components/halter/: default.nix
components/print/: default.nix
components/ui/conrod/window/: Cargo.toml  default.nix
components/ui/conrod/window/src/: .lib.rs.swp  lib.rs
components/workbench/: default.nix
contracts/: README.md  default.nix
contracts/command/: default.nix
contracts/domain_port/: contract.capnp  default.nix
contracts/file/: contract.capnp
contracts/file_error/: contract.capnp  default.nix
contracts/option_path/: contract.capnp  default.nix
contracts/path/: contract.capnp  default.nix
contracts/protocol_domain_port/: contract.capnp  default.nix
contracts/quadruple/: contract.capnp  default.nix
contracts/tuple/: default.nix
contracts/url/: contract.capnp  default.nix
doc/: README.md  coding-conventions.xml  default.nix  index.adoc  introduction.xml  manual.xml  quick-start.adoc  quick-start.xml
doc/highlight/: highlight.min.js
doc/images/: connect.graphml  delete.graphml  get.graphml  global_http.graphml  http_get.graphml  patch.graphml  patch_final.graphml  patch_without_sync.graphml  post.graphml  request_response.graphml  subnet_ex0.graphml  subnet_ex1.graphml  subnet_ex10.graphml  subnet_ex11.graphml  subnet_ex12.graphml  subnet_ex13.graphml  subnet_ex14.graphml  subnet_ex15.graphml  subnet_ex3.graphml  subnet_ex4.graphml  subnet_ex5.graphml  subnet_ex6.graphml  subnet_ex7.graphml  subnet_ex8.graphml  subnet_ex9.graphml
edges/: README.adoc  README.md  default.nix
edges/capnp/: default.nix
edges/command/: default.nix
edges/domain_port/: default.nix
edges/file_error/: default.nix
edges/idr/: default.nix
edges/option_path/: default.nix
edges/path/: default.nix
edges/quadruple/: default.nix
edges/rs/: default.nix
edges/tuple/: default.nix
edges/url/: default.nix
fractalide/: Cargo.toml  hydra-service.nix
fractalide/src/: main.rs
fractals/: README.adoc  README.md  default.nix
fractals/nanomsg/: default.nix
fractals/workbench/: default.nix
fvm/: Cargo.toml  README.md  default.nix
fvm/fvm/: Cargo.toml  default.nix  setup-hook.sh
fvm/fvm-android/: Cargo.toml  default.nix
fvm/fvm-android/src/: main.rs
fvm/fvm/src/: lib.rs  main.rs
fvm/libfvm/: Cargo.toml  default.nix
fvm/src/: main.rs
mapping/: Cargo.toml  default.nix
mappings/: component-name.nix  contract-name.nix  default.nix  fractalide-toml.nix  rust-contract-lookup.nix
modules/: default.nix
modules/idr/: build-builtin-package.nix  build-idris-package-builder.nix  build-idris-package-keep.nix  build-idris-package.nix  builder.sh  default.nix  idris.nix  idrisfbp.nix  js.nix  setup.sh  with-packages.nix
modules/purs/: default.nix
modules/rs/: build-rust-package.nix  default.nix
modules/rs/cargo2nix/: Cargo.toml
modules/rs/cargo2nix/src/: main.rs
modules/rs/rustfbp/: Cargo.toml  README.md  default.nix
modules/rs/rustfbp/src/: agent.rs  lib.rs  ports.rs  result.rs  scheduler.rs
nodes/: README.adoc  README.md  default.nix
nodes/bench/: default.nix
nodes/debug/: default.nix
nodes/docs/: default.nix
nodes/fvm/: README.md
nodes/halter/: Cargo.toml  default.nix
nodes/idr/: README.adoc  default.nix
nodes/purs/: README.adoc  default.nix
nodes/rkt/: paging-jsend-get.rkt
nodes/rs/: README.adoc  README.md  default.nix
pkgs/: default.nix  fractalide.nix  nixpkgs.nix  update.sh
pkgs/fractalide/: fracli  fractalide.rkt  paths.rkt
pkgs/hyperflow/: default.rkt  flonly  flonly.rkt  fracli  fracli.rkt  fractal-node-edge-dialog.rkt  hyperflow  info.rkt  main.rkt  run.rkt  toplevel.rkt  utilities.rkt
pkgs/nixpkgs/: bump-nixpkgs.sh  default.nix
pkgs/racket2nix/: bump-racket2nix.sh  bump.sh  default.json  default.nix
rustfbp/: Cargo.toml  README.md
rustfbp/benches/: lib.rs
rustfbp/src/: allocator.rs  component.rs  lib.rs  loader.rs  ports.rs  result.rs  scheduler.rs  subnet.rs
rustfbp/tests/schema/: number_capnp.rs
services/: README.adoc  README.md  default.nix
src/: allocator.rs  component.rs  fvm.rs  lib.rs  loader.rs  main.rs  ports.rs  result.rs  scheduler.rs  subnet.rs
support/: agent.nix  buildFractalideComponent.nix  buildFractalideContract.nix  buildFractalideSubnet.nix  buildRustPackage.nix  capnpc-rust.nix  default.nix  edge.nix  encryptComponent.nix  fetchcargo.nix  genName.nix  imsg.nix  rust-packages.nix  rustArtefact.nix  rustc.nix  rustfbp.nix  subgraph.nix  unifySchema.nix  upkeepers.nix
support/rustfbp/: Cargo.toml  README.md
support/rustfbp/src/: agent.rs  component.rs  lib.rs  ports.rs  result.rs  scheduler.rs
support/vm/: Cargo.toml  default.nix
support/vm/src/: lib.rs  main.rs
test/: graph.rkt  mock.rkt
tests/: default.nix  lib.rs
utils/: hydra-service.nix  new_component.py  update-components.py  update-system.py
(+1137 files in other folders)
