[package]

name = "fractalide"
version = "0.1.0"
authors = [
"Denis Michiels <dmichiels@gmail.com>",
"Stewart Mackenzie <setori88@gmail.com>"]
license = "AGPL-3.0"
description = "Fractalide Virtual Machine"
repository = "https://github.com/fractalide/fractalide"

readme = "README.md"

keywords = ["virtual machine", "flow based programming"]

[lib]

name = "fractalide"
path = "src/lib.rs"


[[bin]]

name = "fractalide"
path = "src/main.rs"


[dependencies]
nom = "1.1.0"

