[package]
name = "fractalide"
version = "0.1.0"
authors = [
"Denis Michiels <dmichiels@gmail.com>",
"Stewart Mackenzie <setori88@gmail.com>"]
license = "AGPL-3.0"
description = "Fractalide"
repository = "https://github.com/fractalide/fractalide"
readme = "README.md"
keywords = ["virtual machine", "flow based programming"]

[dependencies]
byteorder = "0.3"
env_logger = "0.3.1"
log = "0.3.1"
mio = "0.5"
clap = "1.5.5"

[[bin]]
name = "fractalide"
path = "src/main.rs"


