[package]
name = "rustfbp"
version = "0.3.7"
authors = ["Denis Michiels <dmichiels@gmail.com>"]
license = "AGPL-3.0"
homepage = "http://github.com/fractalide/rustfbp"
repository = "http://github.com/fractalide/rustfbp"
description = "Fractalide, a Flow-based programming environment in Rust"

[dependencies]
capnp = "^0.6.2"
capnpc = "^0.6.0"
libloading = "^0.2.1"
