[package]
name = "fvm"
version = "0.2.0"
authors = ["Denis Michiels <dmichiels@gmail.com>"]
license = "AGPL-3.0"
homepage = "http://github.com/fractalide/fvm"
repository = "http://github.com/fractalide/fvm"
description = "FVM, the Fractalide virtual machine"

[[bin]]
name = "fvm"
path = "./src/main.rs"

[dependencies]
capnp = "*"
rustfbp = "*"
