[package]
name = "rustfbp"
version = "0.3.18"
authors = ["Denis Michiels <dmichiels@gmail.com>","Stewart Mackenzie <setori88@gmail.com>"]
license = "MPL-2.0"
homepage = "https://gitlab.com/fractalide/fractalide/tree/master/rustfbp"
repository = "https://gitlab.com/fractalide/fractalide/tree/master/rustfbp"
description = "Fractalide, a Flow-based programming environment in Rust"

[dependencies]
capnp = "^0.7.4"
libloading = "^0.2.2"
threadpool = "^1.3.0"
