[package]
name = "rustfbp"
version = "0.3.32"
authors = ["Denis Michiels <dmichiels@gmail.com>","Stewart Mackenzie <setori88@gmail.com>"]
license = "MPL-2.0"
homepage = "https://gitlab.com/fractalide/fractalide"
repository = "https://gitlab.com/fractalide/fractalide/tree/master/support/rustfbp"
description = "Rustfbp provides a simple, composable, clearly defined API, with a C ABI for every agent within a Fractalide microservice deployment."

[dependencies]
capnp = "^0.7.5"
libloading = "^0.3.1"
threadpool = "^1.3.2"
