[package]
name = "vm"
version = "0.2.0"
authors = ["Denis Michiels <dmichiels@gmail.com>"]
license = "MPL-2.0"
homepage = "http://github.com/fractalide/vm"
repository = "http://github.com/fractalide/vm"
description = "FVM, the Fractalide virtual machine"

[lib]
name = "vm"
path = "./src/lib.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "vm"
path = "./src/main.rs"

[dependencies]
capnp = "*"
rustfbp = "*"
