[package]
name = "Cargo2Nix"
description = "Generate Nix expressions from Cargo.lock files (in order to use Nix as a build system for crates)."
homepage = "https://nest.pijul.com/pmeunier/nix-rust"
repository = "https://nest.pijul.com/pmeunier/nix-rust"
version = "0.1.3"
license = "MIT/Apache-2.0"
authors = ["pe@pijul.org <pe@pijul.org>, Stewart Mackenzie <setori88@gmail.com>"]
include = [ "Cargo.toml", "src/main.rs" ]

[dependencies]
clap = "2.23"
log = "0.3"
env_logger = "0.4"
regex = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
tempdir = "0.3"
toml = "0.3"
rusqlite = "0.12"
