[package]
name = "rustfbp"
version = "0.3.34"
authors = ["Denis Michiels <dmichiels@gmail.com>","Stewart Mackenzie <setori88@gmail.com>"]
license = "MPL-2.0"
homepage = "https://gitlab.com/fractalide/fractalide"
repository = "https://github.com/fractalide/fractalide/tree/master/modules/rs/rustfbp"
description = "Rustfbp provides a simple, composable, clearly defined API, with a C ABI for every agent within a Fractalide deployment."

[dependencies]
capnp = "*"
libloading = "0.4"
threadpool = "*"
