[package]
name = "ui_conrod_window"
version = "0.1.0"
authors = ["test <test@test.com>"]

[lib]
name = "ui_conrod_window"
crate-type = ["dylib"]

[dependencies]
rustfbp = "*"
capnp = "*"
gfx_gl = "0.3.0"
env_logger = "0.3.2"
collada = "0.2.0"
vecmath = "0.2.0"
quaternion = "0.2.0"
dual_quaternion = "0.1.0"
gfx = "0.8.0"
gfx_device_gl = "0.7.0"
piston-gfx_texture = "0.7.0"
interpolation = "0.1.0"
piston-float = "0.2.0"
shader_version = "0.2.1"
sdl2 = "0.13.0"
pistoncore-sdl2_window = "0.23.0"
camera_controllers = "0.10.0"
piston = "0.17.0"
piston_window = "0.34.0"
gfx_text = "0.8.0"
gfx_debug_draw = "0.9.1"
dev_menu = "0.8.0"


